--- a/inv_muebleria/template.html
+++ b/inv_muebleria/template.html
@@ -138,23 +138,20 @@
 
           <div class="row">
             <div class="col-lg-12">
-              <div class="caja2">
                 <div class="row">
                   <div class="col-md-6">
-                    <h1 class="mx-4">Misión</h1>
+                    <h1 class="mx-4 text-danger font-weight-normal">Misión</h1>
                     <p class="text-justify m-3">Nuestra misión en Bodega de Muebles es poner a tu disposición mobiliario y accesorios modernos, conservadores, contemporáneos, que conlleven calidad, innovación tecnológica, tendencias y estilos internacionales, sustentados en la constante búsqueda de corrientes estéticas, así como propuestas con nuevos materiales, formas, colores y estilos, con el compromiso de mejorar día con día y estar a la vanguardia, con el propósito de satisfacer las necesidades de nuestros clientes.
 
 Estamos seguros de que nuestros compradores potenciales: profesionistas, empresarios, arquitectos, diseñadores, decoradores de interiores y amas de casa que busquen crear o renovar la imagen de sus hogares, oficinas y espacios especiales estarán más que satisfechos con nuestra propuesta y podrán encontrar en esta página todo lo que deseen decorando sus sentidos.</p>
                   </div>
                   <div class="col-md-6">
-                    <h1 class="mx-4">Visión</h1>
+                    <h1 class="mx-4 text-danger font-weight-normal">Visión</h1>
                     <p class="text-justify m-3">La visión de Bodega de Muebles es ser una empresa con proyección nacional e internacional, lo cual será posible mediante el esfuerzo, dedicación y profesionalismo de nuestro equipo de trabajo, tomando en cuenta las tendencias del mercado, las necesidades actuales y futuras de nuestros clientes, seguirnos renovando y actualizando en esta área para llegar a ser la mejor opción para el público de venta de muebles y accesorios en decoración para residencias, oficinas, hoteles, restaurantes, hospitales y mucho más.</p>
                   </div>
                 </div>
               </div>
             </div>
-          </div>
-
         </div>
       </div>
 
