agragar pie de pagina
... descripccion de la pagina...

--- a/inv_muebleria/template.html
+++ b/inv_muebleria/template.html
@@ -163,6 +163,12 @@ Estamos seguros de que nuestros compradores potenciales: profesionistas, empresa
       </div>
     </div>
   </div>
-
+ <footer>
+        <div class='define'>
+            <p>MUEBLERIA-ITA - ALGUNOS DERECHOS RESERVADOS © 2017 
+Vlv. Vicente Guerrero C.P. 39905 
+E-mail de contacto: muebleriait.acapulco@hotmail.com, Teléfonos (744) 116-45-78  .</p>
+        </div>
+    </footer>
 </body>
 </html>
