--- a/inv_muebleria/template.html
+++ b/inv_muebleria/template.html
@@ -127,12 +127,12 @@
       <!--<div class="col-lg-8">
         <div id="contenidoPrincipal"> -->
           
-         <!-- <div class="row">
+          <div class="row">
             <div class="col-lg-6">
-              <div class="caja"></div> -->
+              <div ><img src="imagenesMue/Imagen 1.jpg" width="500" height="200"></div>
             </div> 
-            <!-- <div class="col-lg-6">
-              <div class="caja"></div> -->
+             <div class="col-lg-6">
+              <div ><img src="imagenesMue/Imagen 2.jpg" width="500" height="200"></div> 
             </div>
           </div>
 <br>
