--- a/inv_muebleria/template.html
+++ b/inv_muebleria/template.html
@@ -116,8 +116,35 @@
     </div>
     </nav>
 
-
-    
+    <div class="container" style="margin-bottom: 40px">
+<div id="Banner" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+    <li data-target="#Banner" data-slide-to="0" class="active"></li>
+    <li data-target="#Banner" data-slide-to="1"></li>
+    <li data-target="#Banner" data-slide-to="2"></li>
+  </ol>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img class="d-block w-30" src="imagenesMue/banner1.jpg" alt="First slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-30" src="imagenesMue/banner2.jpg" alt="Second slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-30" src="imagenesMue/banner3.jpg" alt="Third slide">
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#Banner" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Anterior</span>
+  </a>
+  <a class="carousel-control-next" href="#Banner" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Siguente</span>
+  </a>
+</div>
+        
+    </div>
 
    <!-- <div class="row">
       <div class="col-lg-2">
