--- a/inv_muebleria/index.html
+++ b/inv_muebleria/index.html
@@ -2,18 +2,20 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Document</title>
+  <title>Muebleria ITA</title>
   <link rel="stylesheet" href="css/misEstilos.css">
   <link rel="stylesheet" href="css/misEstilos.css">
+
+
+	
+<script type="text/javascript">
+</script>
+
 
 </head>
 <body>
-  Hola mundo
-  <p id="miParrafo">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem vero officiis vel quos dolore, eum maiores consectetur placeat est culpa. Maxime, molestiae! Veniam enim, doloremque accusamus assumenda suscipit dignissimos repellendus!</p>
+	
+ 
 
-  <p class="miParrafo">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem vero officiis vel quos dolore, eum maiores consectetur placeat est culpa. Maxime, molestiae! Veniam enim, doloremque accusamus assumenda suscipit dignissimos repellendus!</p>
-
-  <p class="miParrafo">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem vero officiis vel quos dolore, eum maiores consectetur placeat est culpa. Maxime, molestiae! Veniam enim, doloremque accusamus assumenda suscipit dignissimos repellendus!</p>
-  <p class="miParrafo">belen de la paz </p>
 </body>
 </html>
