Pag de Contacto
Agregando Pag de Contacto

--- a/inv_muebleria/template.html
+++ b/inv_muebleria/template.html
@@ -70,7 +70,14 @@ background="C:\Users\office depot\Documents\GitHub\InvMuebleria\inv_muebleria\im
   </li>
 
   <li class="nav-item soportetecnico">
-    <a class=" p-1 nav-link disabled dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false"> <FONT SIZE=1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;INFORMACIÓN DE LA EMPRESA</a></FONT>
+    <a class=" p-1 nav-link disabled dropdown-toggle" data-toggle="dropdown" href="informacionEmpresa.html" role="button" aria-haspopup="true" aria-expanded="false"> <FONT SIZE=1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;INFORMACIÓN DE LA EMPRESA</a>
+
+
+    </FONT>
+
+  
+   
+ 
   </li>
 
  <li class="nav-item soportetecnico">
@@ -78,7 +85,7 @@ background="C:\Users\office depot\Documents\GitHub\InvMuebleria\inv_muebleria\im
  </li>
 
  <li class="nav-item">
- <a class=" p-1 nav-link disabled" href="#"><FONT SIZE=1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;CONTACTO</a></FONT> 
+ <a class=" p-1 nav-link disabled" href="contacto.html"><FONT SIZE=1>&nbsp;&nbsp;&nbsp;&nbsp;CONTACTO</a></FONT> 
  </li>
  
   <li class="nav-item">
