--- a/inv_muebleria/InformacionEmpresa.html
+++ b/inv_muebleria/InformacionEmpresa.html
@@ -5,9 +5,9 @@
 	<title> Localización</title>
 	<link rel="stylesheet" href="css/misEstilos.css">
 	<link rel="stylesheet" href="css/bootstrap.css">
+	<title>InformacionDeLaEmpresa</title>
 </head>
 <body>
-
 	 <!-- Inicio Menu -->
    <nav class="navbar navbar-expand-lg navbar-light bg-light">
    <ul class="nav">
@@ -54,22 +54,15 @@
 <!-- Fin del Menu -->
 
 
-<!!-- Incio del mapa -->
-
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3818.3310050136606!2d-99.81330028565353!3d16.859512722252955!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85ca5a0221bd1623%3A0x2162d17e99742acb!2sInstituto+Tecnol%C3%B3gico+de+Acapulco!5e0!3m2!1ses!2smx!4v1542164350654" width="1313" height="600" frameborder="0" style="border:0" allowfullscreen></iframe>
-<!-- Fin del mapa-->
-
-
-<!--Inicio de pie pag-->
-     </div>
-        <div class="footer">
+	<!-- Inicio de pie de pag-->
+	   <div class="footer">
           <FONT FACE="courier" SIZE=1 COLOR="#4B4A48">Muebleria-ITA - Algunos derechos son reservados© 2017 
            Vlv. Vicente Guerrero C.P. 39905 
           </FONT>
         </div>
-        <!-- Fin del pie de pag-->
+
+	<!-- Fin de pie de pag -->
+
 
 </body>
-
-
 </html>
