--- a/inv_muebleria/template.html
+++ b/inv_muebleria/template.html
@@ -145,7 +145,7 @@ background="C:\Users\office depot\Documents\GitHub\InvMuebleria\inv_muebleria\im
         <label for="password">Contraseña</label>
         <input type="password" placeholder="Enter Contraseña">
         <input type="submit" value="Iniciar sesión">
-        <a href="#">Olvidaste tu contraseña?</a><br>
+        <a href="olvidandoContrasena.html">Olvidaste tu contraseña?</a><br>
         
 
       </form>
