--- a/inv_muebleria/olvidandoContrasena.html
+++ b/inv_muebleria/olvidandoContrasena.html
@@ -53,31 +53,28 @@
 </ul>
 <!-- Fin del Menu -->
 
-<h1>
+<!-- Inicio del contenido-->
+<div>
+ <h1>
  	<div class="contenedorContenido">
   <div class="centrado" >
   <h3 font color="black" face="arial">
 
-  	La asignacion de contraseñas es unica y exclusiva para cada usuario, 
+  	Los nombres de usuarios y/o contraseñas son unicas y diferentes para cada empleado.
   	<p>
-  	la cual es asignada por el gerente a cargo. 
+  	Si haz olvidado el tuyo favor de ponerte en contacto con el gerente encargado para
+  	la reaccinación de esta misma.
     </p>
-    <p>
-    	Si haz olvidado tu usuario y/o  contraseña favor de solicitarla con el gerente mismo.
-    </p>
-    <p>
-    	
-    			<b>
-    				Saludos cordiales.
-    			</b>
-    			
-    </p>
+    <br> 
+Saludos cordiales.
+ </h3>
    </div>
     </div>
+<!-- Fin del contenido-->
 
 
 
-<!--Inicio de pie pag-->
+    <!--Inicio de pie pag-->
      </div>
         <div class="footer">
           <FONT FACE="courier" SIZE=1 COLOR="#4B4A48">Muebleria-ITA - Algunos derechos son reservados© 2017 
@@ -85,6 +82,7 @@
           </FONT>
         </div>
         <!-- Fin del pie de pag-->
+
 
 </body>
 </html>
