--- a/inv_muebleria/Altas.html
+++ b/inv_muebleria/Altas.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>modificaciones</title>
+	<title>altas</title>
 	<link rel="stylesheet" href="css/misEstilosContacto.css">
 	<link rel="stylesheet" href="css/bootstrap.css">
 </head>
@@ -60,7 +60,29 @@
   <div class="centrado" >
   <h3 font color="black" face="arial">
 
+<!--<div class="efecto">
+  <img src="https://i.stack.imgur.com/bd7VJ.png" />
+</div>
+<br>
+<div class="efecto">
+<img src="https://orig00.deviantart.net/9f95/f/2012/166/4/5/mano_png_by_sandhansen-d53lqev.png" />
+</div> -->
 
+<div class="btn-group-vertical" role="toolbar" aria-label="Basic example">
+    <div class="btn-group mr-2" role="group" aria-label="First group">
+ 
+  <button type="button" class="btn btn-secondary" >&nbsp;&nbsp;&nbsp; Alta Usuarios &nbsp;&nbsp;&nbsp;</button>
+  </div>
+  <button type="button" class="btn btn-secondary" >Altas Productos</button>
+   </div>
+
+   </div>
+    </div>
+
+
+<!-- 
+
+ -->
 
 
 <p>
