--- a/inv_muebleria/InformacionEmpresa.html
+++ b/inv_muebleria/InformacionEmpresa.html
@@ -2,9 +2,10 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>modificaciones</title>
-	<link rel="stylesheet" href="css/misEstilosContacto.css">
+	<title> Localización</title>
+	<link rel="stylesheet" href="css/misEstilos.css">
 	<link rel="stylesheet" href="css/bootstrap.css">
+	<title>InformacionDeLaEmpresa</title>
 </head>
 <body>
 	 <!-- Inicio Menu -->
@@ -52,30 +53,16 @@
 </ul>
 <!-- Fin del Menu -->
 
-<!-- Inicio del contenido-->
 
-<div>
- <h1>
-  <div class="contenedorContenido">
-  <div class="centrado" >
-  <h3 font color="black" face="arial">
-
-
-
-
-<p>
-  
-</p>
-<!-- Fin del contenido-->
-
-<!--Inicio de pie pag-->
-     </div>
-        <div class="footer">
+	<!-- Inicio de pie de pag-->
+	   <div class="footer">
           <FONT FACE="courier" SIZE=1 COLOR="#4B4A48">Muebleria-ITA - Algunos derechos son reservados© 2017 
            Vlv. Vicente Guerrero C.P. 39905 
           </FONT>
         </div>
-        <!-- Fin del pie de pag-->
+
+	<!-- Fin de pie de pag -->
+
 
 </body>
 </html>
