--- a/inv_muebleria/contacto.html
+++ b/inv_muebleria/contacto.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>modificaciones</title>
+	<title>Contacto</title>
 	<link rel="stylesheet" href="css/misEstilosContacto.css">
 	<link rel="stylesheet" href="css/bootstrap.css">
 </head>
@@ -53,19 +53,18 @@
 <!-- Fin del Menu -->
 
 <!-- Inicio del contenido-->
-
 <div>
  <h1>
-  <div class="contenedorContenido">
+ 	<div class="contenedorContenido">
   <div class="centrado" >
   <h3 font color="black" face="arial">
 
-
-
-
-<p>
-  
-</p>
+  	E-mail: muebleria.ita@hotmail.com
+  	<p>
+  	Teléfonos:  (744) 442-9010 al 19.
+    </p>
+   </div>
+    </div>
 <!-- Fin del contenido-->
 
 <!--Inicio de pie pag-->
