--- a/inv_muebleria/gerente.html
+++ b/inv_muebleria/gerente.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>modificaciones</title>
+	<title>Gerente</title>
 	<link rel="stylesheet" href="css/misEstilosContacto.css">
 	<link rel="stylesheet" href="css/bootstrap.css">
 </head>
@@ -59,6 +59,26 @@
   <div class="contenedorContenido">
   <div class="centrado" >
   <h3 font color="black" face="arial">
+
+<!--<div class="efecto">
+  <img src="https://i.stack.imgur.com/bd7VJ.png" />
+</div>
+<br>
+<div class="efecto">
+<img src="https://orig00.deviantart.net/9f95/f/2012/166/4/5/mano_png_by_sandhansen-d53lqev.png" />
+</div> -->
+
+<div class="btn-group-vertical" role="group" aria-label="Button group with nested dropdown">
+    <a class="btn btn-secondary" href="registrarclientes.html">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ALTAS&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
+    
+    <a class="btn btn-secondary" href="modificaciones.html">MODIFICACIONES</a>
+    <a class="btn btn-secondary" href="">BAJAS</a>
+
+
+     
+    </div>
+  </div>
+</div>
 
 
 
