--- a/inv_muebleria/olvidandoContrasena.html
+++ b/inv_muebleria/olvidandoContrasena.html
@@ -2,9 +2,10 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>modificaciones</title>
-	<link rel="stylesheet" href="css/misEstilosContacto.css">
-	<link rel="stylesheet" href="css/bootstrap.css">
+  <title>Olvidando Contraseña</title>
+  <link rel="stylesheet" href="css/bootstrap.css">
+  <link rel="stylesheet" href="css/login.css">
+  <link rel="stylesheet" href="css/misEstilosOlvidandoContraseña.css">
 </head>
 <body>
 	 <!-- Inicio Menu -->
@@ -53,22 +54,27 @@
 <!-- Fin del Menu -->
 
 <!-- Inicio del contenido-->
-
 <div>
  <h1>
-  <div class="contenedorContenido">
+ 	<div class="contenedorContenido">
   <div class="centrado" >
   <h3 font color="black" face="arial">
 
-
-
-
-<p>
-  
-</p>
+  	Los nombres de usuarios y/o contraseñas son unicas y diferentes para cada empleado.
+  	<p>
+  	Si haz olvidado el tuyo favor de ponerte en contacto con el gerente encargado para
+  	la reaccinación de esta misma.
+    </p>
+    <br> 
+Saludos cordiales.
+ </h3>
+   </div>
+    </div>
 <!-- Fin del contenido-->
 
-<!--Inicio de pie pag-->
+
+
+    <!--Inicio de pie pag-->
      </div>
         <div class="footer">
           <FONT FACE="courier" SIZE=1 COLOR="#4B4A48">Muebleria-ITA - Algunos derechos son reservados© 2017 
@@ -76,6 +82,7 @@
           </FONT>
         </div>
         <!-- Fin del pie de pag-->
+
 
 </body>
 </html>
