--- a/inv_muebleria/localizacion.html
+++ b/inv_muebleria/localizacion.html
@@ -2,11 +2,12 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>modificaciones</title>
-	<link rel="stylesheet" href="css/misEstilosContacto.css">
+	<title> Localización</title>
+	<link rel="stylesheet" href="css/misEstilos.css">
 	<link rel="stylesheet" href="css/bootstrap.css">
 </head>
 <body>
+
 	 <!-- Inicio Menu -->
    <nav class="navbar navbar-expand-lg navbar-light bg-light">
    <ul class="nav">
@@ -52,21 +53,12 @@
 </ul>
 <!-- Fin del Menu -->
 
-<!-- Inicio del contenido-->
 
-<div>
- <h1>
-  <div class="contenedorContenido">
-  <div class="centrado" >
-  <h3 font color="black" face="arial">
+<!!-- Incio del mapa -->
 
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3818.3310050136606!2d-99.81330028565353!3d16.859512722252955!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85ca5a0221bd1623%3A0x2162d17e99742acb!2sInstituto+Tecnol%C3%B3gico+de+Acapulco!5e0!3m2!1ses!2smx!4v1542164350654" width="1313" height="600" frameborder="0" style="border:0" allowfullscreen></iframe>
+<!-- Fin del mapa-->
 
-
-
-<p>
-  
-</p>
-<!-- Fin del contenido-->
 
 <!--Inicio de pie pag-->
      </div>
@@ -78,4 +70,6 @@
         <!-- Fin del pie de pag-->
 
 </body>
+
+
 </html>
