--- a/Adm.html
+++ b/Adm.html
@@ -2,14 +2,13 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title> Localización</title>
-	<link rel="stylesheet" href="css/misEstilos.css">
+	<title>Administrador</title>
+	<link rel="stylesheet" href="css/misAdmEstilos.css">
 	<link rel="stylesheet" href="css/bootstrap.css">
-  <link rel="stylesheet" href="css/EstiloMenu.css">
 </head>
 <body>
-
 	 <!-- Inicio Menu -->
+   
    <nav class="navbar navbar-expand-lg navbar-light bg-light">
    <ul class="nav">
     <img src="imagenesMue/logoMue.png" width="35px" height="35px">
@@ -23,7 +22,7 @@
   </li>
     
   <li class="nav-item">
-    <a class="p-1 nav-link disabled" href="index.html"><FONT SIZE=1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;INICIO</a></FONT>
+    <a class="p-1 nav-link disabled" href="template.html"><FONT SIZE=1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;INICIO</a></FONT>
   </li>
 
   <li class="nav-item">
@@ -52,14 +51,52 @@
   <ul class="nav">
     <img src="imagenesMue/logoMue.png" width="35px" height="35px">
 </ul>
+
 <!-- Fin del Menu -->
+<div>
+<!-- Inicio del contenido-->
+
+<div>
+ <h1>
+  <div class="contenedorContenido">
+  <div class="centrado" >
+  <h3 font color="black" face="arial">
+
+<!--<div class="efecto">
+  <img src="https://i.stack.imgur.com/bd7VJ.png" />
+</div>
+<br>
+<div class="efecto">
+<img src="https://orig00.deviantart.net/9f95/f/2012/166/4/5/mano_png_by_sandhansen-d53lqev.png" />
+</div> -->
+
+<div class="btn-group-vertical" role="group" aria-label="Button group with nested dropdown">
+    <a class="btn btn-secondary" href="RegistrarTiArticulo.html">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; ALTAS&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
+    </div>
+
+    <div class="btn-group" role="group" aria-label="Button group with nested dropdown">
+    <a class="btn btn-secondary" href="modificaciones.html"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; BAJAS &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </a>
+</div>
+<div class="btn-group-vertical" role="group" aria-label="Button group with nested dropdown">>
+    <a class="btn btn-secondary" href="bajas.html"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; MODIFICACIONES &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
+</div>
+
+<div class="btn-group" role="group" aria-label="Button group with nested dropdown">
+    <a class="btn btn-secondary" href="bajas.html"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; CONSULTAS &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
+</div>
+
+     
+    </div>
+  </div>
+</div>
 
 
-<!!-- Incio del mapa -->
 
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3818.3310050136606!2d-99.81330028565353!3d16.859512722252955!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85ca5a0221bd1623%3A0x2162d17e99742acb!2sInstituto+Tecnol%C3%B3gico+de+Acapulco!5e0!3m2!1ses!2smx!4v1542164350654" width="1313" height="600" frameborder="0" style="border:0" allowfullscreen></iframe>
-<!-- Fin del mapa-->
 
+<p>
+  
+</p>
+<!-- Fin del contenido-->
 
 <!--Inicio de pie pag-->
      </div>
@@ -71,6 +108,4 @@
         <!-- Fin del pie de pag-->
 
 </body>
-
-
 </html>
