Ajustes a pag altas

--- a/Altas.html
+++ b/Altas.html
@@ -5,6 +5,7 @@
 	<title>altas</title>
 	<link rel="stylesheet" href="css/misEstilosContacto.css">
 	<link rel="stylesheet" href="css/bootstrap.css">
+  <link rel="stylesheet" href="css/estilotablas.css">
 </head>
 <body>
 	 <!-- Inicio Menu -->
@@ -68,13 +69,34 @@
 <img src="https://orig00.deviantart.net/9f95/f/2012/166/4/5/mano_png_by_sandhansen-d53lqev.png" />
 </div> -->
 
-<div class="btn-group-vertical" role="toolbar" aria-label="Basic example">
-    <div class="btn-group mr-2" role="group" aria-label="First group">
- 
-  <button type="button" class="btn btn-secondary" >&nbsp;&nbsp;&nbsp; Alta Usuarios &nbsp;&nbsp;&nbsp;</button>
+<div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
+  <div class="btn-group mr-2" role="group" aria-label="First group">
+    <button type="button" class="btn btn-secondary">ALTA DE USUARIOS</button>
+   
   </div>
-  <button type="button" class="btn btn-secondary" >Altas Productos</button>
-   </div>
+ 
+
+
+<div class="btn-group" role="group" aria-label="Button group with nested dropdown">
+  
+  <div class="btn-group" role="group">
+    <button id="btnGroupDrop1" type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+      ALTA DE PRODUCTOS
+          </button>
+
+    <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
+      <a class="dropdown-item" href="#">hola</a>
+      <a class="dropdown-item" href="#">hola</a>
+    </div>
+  </div>
+</div> 
+
+ 
+   
+
+
+
+
 
    </div>
     </div>
