ajustes pag TiArticulo

--- a/Altas.html
+++ b/Altas.html
@@ -6,6 +6,16 @@
 	<link rel="stylesheet" href="css/misEstilosContacto.css">
 	<link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" href="css/estilotablas.css">
+  <link rel="stylesheet" type="text/css" href="">
+  <script src="resource/js/jquery-1.11.0.js"></script>
+<script src="resources/js/bootstrap.js"></script>
+<script type="text/javascript">$(document).ready(function() {
+    $('dropdown-toggle').dropdown()
+});</script>
+
+
+
+
 </head>
 <body>
 	 <!-- Inicio Menu -->
@@ -61,6 +71,23 @@
   <div class="centrado" >
   <h3 font color="black" face="arial">
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <!--<div class="efecto">
   <img src="https://i.stack.imgur.com/bd7VJ.png" />
 </div>
@@ -69,6 +96,7 @@
 <img src="https://orig00.deviantart.net/9f95/f/2012/166/4/5/mano_png_by_sandhansen-d53lqev.png" />
 </div> -->
 
+<!--
 <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
   <div class="btn-group mr-2" role="group" aria-label="First group">
     <button type="button" class="btn btn-secondary">ALTA DE USUARIOS</button>
@@ -82,6 +110,7 @@
   <div class="btn-group" role="group">
     <button id="btnGroupDrop1" type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
       ALTA DE PRODUCTOS
+      <span class="caret"></span>
           </button>
 
     <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
@@ -91,6 +120,18 @@
   </div>
 </div> 
 
+<hr>
+<div class="dropdown">
+  <button class="btn btn-primary" data-toggle="dropdown"> ele</button>
+
+  <div class="dropdown-menu">
+    <a href="#" class="dropdown-item">uno</a>
+  </div>
+</div>
+
+
+
+
  
    
 
@@ -99,17 +140,9 @@
 
 
    </div>
-    </div>
+    </div> 
+  -->
 
-
-<!-- 
-
- -->
-
-
-<p>
-  
-</p>
 <!-- Fin del contenido-->
 
 <!--Inicio de pie pag-->
