--- a/RegistrarTiArticulo.html
+++ b/RegistrarTiArticulo.html
@@ -4,15 +4,62 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content=" width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" type="text/css" href="formulario.css">
-	<link rel="stylesheet" type="text/css" href="estilotablas.css">
+	<link rel="stylesheet" href="estilotablas.css">
   <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" href="css/login.css">
   <link rel="stylesheet" href="css/misEstilos.css">
 
+
 	<title>REGISTRAR CLIENTES</title>
 </head>
 <body>
-<center><img src="barra.png" width="%50" height="%50"></center>
+   <!-- Inicio Menu -->
+   <div>
+   <nav class="navbar navbar-expand-lg navbar-light bg-light">
+   <ul class="nav">
+    <img src="imagenesMue/logoMue.png" width="35px" height="35px">
+
+  <li class="nav-item">
+    <a class=" p-1 nav-link disabled active ">&nbsp;&nbsp;&nbsp;Muebleria</a>
+  </li>
+
+  <li class="nav-item">
+    <a class=" p-1 nav-link disabled active">| ITA</a>
+  </li>
+    
+  <li class="nav-item">
+    <a class="p-1 nav-link disabled" href="template.html"><FONT SIZE=1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;INICIO</a></FONT>
+  </li>
+
+  <li class="nav-item">
+    <a class=" p-1 nav-link disabled" href="localizacion.html"><FONT SIZE=1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;LOCALIZACIÓN</a></FONT>
+  </li>
+
+  <li class="nav-item soportetecnico">
+    <a class=" p-1 nav-link disabled dropdown-toggle" data-toggle="dropdown" href="informacionEmpresa.html" role="button" aria-haspopup="true" aria-expanded="false"> <FONT SIZE=1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;INFORMACIÓN DE LA EMPRESA</a></FONT>
+  </li>
+
+ <li class="nav-item soportetecnico">
+    <a class=" p-1 nav-link disabled dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false"><FONT SIZE=1>&nbsp;&nbsp;CATALOGO</a></FONT>
+ </li>
+
+ <li class="nav-item">
+ <a class=" p-1 nav-link disabled" href="contacto.html"><FONT SIZE=1>&nbsp;&nbsp;&nbsp;&nbsp;CONTACTO</a></FONT> 
+ </li>
+ 
+  <li class="nav-item">
+    <a class=" p-1 nav-link disabled active ">&nbsp;&nbsp;&nbsp;Muebleria</a>
+  </li>
+
+  <li class="nav-item">
+    <a class=" p-1 nav-link disabled active">| ITA&nbsp;&nbsp;&nbsp;</a>
+  </li>
+  <ul class="nav">
+    <img src="imagenesMue/logoMue.png" width="35px" height="35px">
+</ul>
+</div>
+<!-- Fin del Menu -->
+<div>
  <div class="contenido">
  	<div class="form_top">
  		<h2> Registro <span>Clientes</span></h2>
@@ -25,7 +72,7 @@
     <input class="input" type="tex"  placeholder="tamano" required>
     <input class="input" type="text" placeholder="color" required  autofocus>
     <input class="input" type="text"  placeholder="descripcion" required>
-   >	
+   
     <div class="boton">
      <input class="registrar" type="submit" value="REGISTRAR">
      <input class="limpiar" type="reset" value="LIMPIAR">
@@ -57,6 +104,6 @@
   		</tbody>
   	</table>
   </center>
-
+</div>
 </body>
 </html>
