--- a/inv_muebleria/bajas.html
+++ b/inv_muebleria/bajas.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="UTF-8">
-	<title>altas</title>
-	<link rel="stylesheet" href="css/misEstilosContacto.css">
-	<link rel="stylesheet" href="css/bootstrap.css">
+  <meta charset="UTF-8">
+  <title>Gerente</title>
+  <link rel="stylesheet" href="css/misEstilosContacto.css">
+  <link rel="stylesheet" href="css/bootstrap.css">
+  <script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
+
 </head>
 <body>
-	 <!-- Inicio Menu -->
+   <!-- Inicio Menu -->
    <nav class="navbar navbar-expand-lg navbar-light bg-light">
    <ul class="nav">
     <img src="imagenesMue/logoMue.png" width="35px" height="35px">
@@ -50,54 +52,44 @@
   <ul class="nav">
     <img src="imagenesMue/logoMue.png" width="35px" height="35px">
 </ul>
+</nav>
 <!-- Fin del Menu -->
 
 <!-- Inicio del contenido-->
 
-<div>
- <h1>
-  <div class="contenedorContenido">
-  <div class="centrado" >
-  <h3 font color="black" face="arial">
-
-<!--<div class="efecto">
-  <img src="https://i.stack.imgur.com/bd7VJ.png" />
-</div>
-<br>
-<div class="efecto">
-<img src="https://orig00.deviantart.net/9f95/f/2012/166/4/5/mano_png_by_sandhansen-d53lqev.png" />
-</div> -->
-
-<div class="btn-group-vertical" role="toolbar" aria-label="Basic example">
-    <div class="btn-group mr-2" role="group" aria-label="First group">
- 
-  <button type="button" class="btn btn-secondary" >&nbsp;&nbsp;&nbsp; Alta Usuarios &nbsp;&nbsp;&nbsp;</button>
+<div class="container" >
+  <div class="my-5">
+     <table class="table table-bordered bg-light">
+    <thead>
+      <tr>
+        <th>id</th>
+        <th>articulos</th>
+        <th>precio</th>
+        <th>cantidad</th>
+      </tr>
+    </thead>
+    <tbody  id="result">
+    </tbody>
+  </table>
   </div>
-  <button type="button" class="btn btn-secondary" href="altasProductos.html">Altas Productos</button>
-   </div>
-
-   </div>
-    </div>
-
-
-<!-- 
-
- -->
-
-
-<p>
-  
-</p>
+</div>
 <!-- Fin del contenido-->
 
 <!--Inicio de pie pag-->
-     </div>
-        <div class="footer">
+ <div class="footer">
           <FONT FACE="courier" SIZE=1 COLOR="#4B4A48">Muebleria-ITA - Algunos derechos son reservados© 2017 
            Vlv. Vicente Guerrero C.P. 39905 
           </FONT>
         </div>
-        <!-- Fin del pie de pag-->
+
+  <!-- Fin de pie de pag -->
+
 
 </body>
-</html>
+</html>  
+
+<script type="text/javascript">$(document).ready(function(){
+    $.post("BD/articulos.php",function(data) {
+            $("#result").html(data);
+    });
+  })</script>   
