--- a/Adm.html
+++ b/Adm.html
@@ -12,46 +12,16 @@
    
    <nav class="navbar navbar-expand-lg navbar-light bg-light">
    <ul class="nav">
-    <img src="imagenesMue/logoMue.png" width="35px" height="35px">
-
-  <li class="nav-item">
-    <a class=" p-1 nav-link disabled active ">&nbsp;&nbsp;&nbsp;Muebleria</a>
-  </li>
-
-  <li class="nav-item">
-    <a class=" p-1 nav-link disabled active">| ITA</a>
-  </li>
     
   <li class="nav-item">
-    <a class="p-1 nav-link disabled" href="template.html"><FONT SIZE=1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;INICIO</a></FONT>
+    <a class="p-1 nav-link disabled" href="index.html"><FONT SIZE=1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;INICIO</a></FONT>
   </li>
-
-  <li class="nav-item">
-    <a class=" p-1 nav-link disabled" href="localizacion.html"><FONT SIZE=1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;LOCALIZACIÓN</a></FONT>
-  </li>
-
-  <li class="nav-item soportetecnico">
-    <a class=" p-1 nav-link disabled dropdown-toggle" data-toggle="dropdown" href="informacionEmpresa.html" role="button" aria-haspopup="true" aria-expanded="false"> <FONT SIZE=1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;INFORMACIÓN DE LA EMPRESA</a></FONT>
-  </li>
-
- <li class="nav-item soportetecnico">
-    <a class=" p-1 nav-link disabled dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false"><FONT SIZE=1>&nbsp;&nbsp;CATALOGO</a></FONT>
- </li>
 
  <li class="nav-item">
- <a class=" p-1 nav-link disabled" href="contacto.html"><FONT SIZE=1>&nbsp;&nbsp;&nbsp;&nbsp;CONTACTO</a></FONT> 
- </li>
- 
-  <li class="nav-item">
-    <a class=" p-1 nav-link disabled active ">&nbsp;&nbsp;&nbsp;Muebleria</a>
+    <a class=" p-1 nav-link disabled active">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;SISTEMA ELECTRÓNICO PARA EL CONTROL DE REACTIVOS Y MATERIALES EN LABORATORIOS</a>
   </li>
 
-  <li class="nav-item">
-    <a class=" p-1 nav-link disabled active">| ITA&nbsp;&nbsp;&nbsp;</a>
-  </li>
-  <ul class="nav">
-    <img src="imagenesMue/logoMue.png" width="35px" height="35px">
-</ul>
+
 
 <!-- Fin del Menu -->
 <div>
@@ -71,20 +41,15 @@
 <img src="https://orig00.deviantart.net/9f95/f/2012/166/4/5/mano_png_by_sandhansen-d53lqev.png" />
 </div> -->
 
-<div class="btn-group-vertical" role="group" aria-label="Button group with nested dropdown">
-    <a class="btn btn-secondary" href="RegistrarTiArticulo.html">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; ALTAS&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
-    </div>
 
     <div class="btn-group" role="group" aria-label="Button group with nested dropdown">
-    <a class="btn btn-secondary" href="modificaciones.html"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; BAJAS &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </a>
+    <a class="btn btn-secondary" href="usuario.html"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; USUARIOS &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </a>
 </div>
-<div class="btn-group-vertical" role="group" aria-label="Button group with nested dropdown">>
-    <a class="btn btn-secondary" href="bajas.html"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; MODIFICACIONES &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
+<div class="btn-group-vertical" role="group" aria-label="Button group with nested dropdown">
+    <a class="btn btn-secondary" href="bajas.html"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; MATERIALES &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
 </div>
 
-<div class="btn-group" role="group" aria-label="Button group with nested dropdown">
-    <a class="btn btn-secondary" href="bajas.html"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; CONSULTAS &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
-</div>
+
 
      
     </div>
