--- a/index.html
+++ b/index.html
@@ -1,13 +1,9 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Muebleria ITA</title>
+  <title>Login_IBQ</title>
   <link rel="stylesheet" href="css/misEstilos.css">
-  
-
-
-	
 <script type="text/javascript">
 </script>
 
@@ -16,12 +12,14 @@
 <body>
 	
  <div class="login-box">
-      <img src="imagenesMue/user.png" class="avatar" alt="Avatar Image">
+      <img src="imagenesIBQ/bio4.jpg" class="avatar" alt="Avatar Image">
       <h1>ACCESO</h1>
-      <form action="./BD/login.php"  method="POST">
+      <form action="validar.php"  method="POST">
         <!-- USERNAME INPUT -->
+
         <label for="username">Usuario</label>
         <input type="text" placeholder="Enter Usuario" name="usuario" required="yes">
+        
         <!-- PASSWORD INPUT -->
         <label for="password">Contraseña</label>
         <input type="password" placeholder="Enter Contraseña" name="password" required="yes">
@@ -30,6 +28,18 @@
      </form>
  </div>
   
+  <!--Inicio de pie pag-->
+     </div>
+        <div class="footer">
+          <FONT FACE="courier" SIZE=3 COLOR="#4B4A48">
+             
+ITA - ALGUNOS DERECHOS RESERVADOS © 2019 
+Avd. Instituto Tecnológico s/n Crucero del Cayaco C.P. 39905 
+E-mail de contacto: it.acapulco@hotmail.com, Teléfonos (744) 442-9010 al 19.
+          </FONT>
+        </div>
+        <!-- Fin del pie de pag-->
+
 
 </body>
 </html>
